metadatafullcopy/unpackaged/objects/Sub_Form__c.object
<CustomObject>
    <fields>
        <fullName>Air_Mover__c</fullName>
        <label>Air Mover</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dehu__c</fullName>
        <label>Dehu</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Sub Forms</relationshipLabel>
        <relationshipName>Sub_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MC__c</fullName>
        <label>MC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Neg_Air__c</fullName>
        <label>Neg Air</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RH__c</fullName>
        <label>RH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <label>Temp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Sub Form</label>
    <nameField>
        <displayFormat>SF-{000000}</displayFormat>
        <label>Sub Form No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sub Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>